# vid-clip-ai

./: .env.example  .gitignore  README.md  claude.md  pyproject.toml  requirements.txt
docs/: prompt-protocol-plan.md
docs/dev-specs/: analysis-and-scoring.md  db-schema.md  rendering-and-export.md  state-and-storage.md
scripts/: __init__.py  init_user.py  setup_db.py  verify_sync.py
src/: __init__.py  main.py
src/agents/: __init__.py  base_agent.py  file_watcher.py  micro_emphasis.py  quality_assurance.py  rendering.py  scoring_ranking.py  text_scoring.py  transcription.py  vision_scoring.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  models.py  operations.py  schema.py
src/pipeline/: __init__.py  context.py  orchestrator.py  state_machine.py
src/prompts/: __init__.py  provider.py
src/prompts/quality_assurance/: v1.yaml
src/prompts/text_scoring/: v1.yaml
src/prompts/vision_scoring/: v1.yaml
src/protocols/: __init__.py  prompt_protocols.py
src/utils/: __init__.py  file_system.py  logging_config.py  video_utils.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
