[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vid-clip-ai"
version = "0.1.0"
description = "Multi-agent pipeline for automatically identifying and exporting clip-worthy moments from videos"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["video", "ai", "clips", "transcription", "whisper", "vlm"]

dependencies = [
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "ffmpeg-python>=0.2.0",
    "opencv-python>=4.8.0",
    "whisperx>=3.0.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "watchdog>=3.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
vid-clip-ai = "src.main:main"
init-user = "scripts.init_user:main"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
